--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.4",
+    "compass-mixins": "^0.12.12",
     "mongoose": "^6.3.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
