--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fjsc/ng2-dnd-list": "^1.0.4",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "@techiediaries/ngx-textarea-autosize": "^1.3.0",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.4",
