--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "expresss": "^0.0.0"
+    "expresss": "^0.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0"
   }
 }
