--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "@techiediaries/ngx-textarea-autosize": "^1.3.0",
+    "alert-sound-notify": "^0.0.8",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.4",
