--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.4",
+    "canvas-confetti": "^1.5.1",
     "compass-mixins": "^0.12.12",
     "mongoose": "^6.3.5",
     "ng-circle-progress": "^1.6.0",
