--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.10.2",
     "@techiediaries/ngx-textarea-autosize": "^1.3.0",
     "alert-sound-notify": "^0.0.8",
+    "angular-bootstrap-colorpicker": "^3.0.32",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.4",
@@ -35,6 +36,7 @@
     "mongoose": "^6.3.5",
     "ng-circle-progress": "^1.6.0",
     "ng2-dragula": "^2.1.1",
+    "ngx-color-picker": "^12.0.1",
     "ngx-sortable": "^1.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
