--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "expresss": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
