--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fjsc/ng2-dnd-list": "^1.0.4",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "@popperjs/core": "^2.10.2",
+    "@swimlane/ngx-charts": "^20.1.2",
     "@techiediaries/ngx-textarea-autosize": "^1.3.0",
     "alert-sound-notify": "^0.0.8",
     "angular-bootstrap-colorpicker": "^3.0.32",
