--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "expresss": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
