--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "es2020",
       "dom"
     ],
+    "resolveJsonModule": true,
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
