--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,13 @@
     "bcryptjs": "^2.4.3",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "expresss": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0"
   }
 }
