--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "expresss": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
