--- a/api/package.json
+++ b/api/package.json
@@ -14,12 +14,15 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "expresss": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.0"
+    "nodemailer": "^6.9.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
