--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.4",
+    "@angular/animations": "^15.1.2",
     "@angular/cdk": "^14.2.7",
     "@angular/common": "^15.0.4",
     "@angular/compiler": "^15.0.4",
@@ -41,6 +41,7 @@
     "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^12.0.1",
     "ngx-sortable": "^1.0.3",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tasktimer": "^3.0.0",
     "tslib": "^2.3.0",
