--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tasks-manager",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.2",
+    "@angular/animations": "^15.2.0-next.4",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "^15.0.4",
-    "@angular/compiler": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.1.2",
-    "@angular/localize": "^15.0.4",
+    "@angular/common": "^15.2.0-next.4",
+    "@angular/compiler": "^15.2.0-next.4",
+    "@angular/core": "^15.2.0-next.4",
+    "@angular/forms": "^15.2.0-next.4",
+    "@angular/localize": "^15.2.0-next.4",
     "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/platform-browser-dynamic": "^15.0.4",
-    "@angular/router": "^15.0.4",
+    "@angular/platform-browser": "^15.2.0-next.4",
+    "@angular/platform-browser-dynamic": "^15.2.0-next.4",
+    "@angular/router": "^15.2.0-next.4",
     "@circlon/angular-tree-component": "^11.0.4",
     "@fjsc/ng2-dnd-list": "^1.0.4",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "^15.0.4",
-    "@angular/compiler-cli": "^15.0.4",
+    "@angular/compiler-cli": "^15.2.0-next.4",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
