--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^12.0.1",
     "ngx-sortable": "^1.0.3",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tasktimer": "^3.0.0",
