--- a/api/package.json
+++ b/api/package.json
@@ -24,5 +24,8 @@
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
