--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
