--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:stats": "ng build --stats-json",
-    "analyze": "webpack-bundle-analyzer dist/tasks-manager/stats.json" ,
+    "analyze": "webpack-bundle-analyzer dist/tasks-manager/stats.json",
     "build-analyze": "npm run build:stats && npm run analyze"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0-next.4",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^15.2.0-next.4",
-    "@angular/compiler": "^15.2.0-next.4",
-    "@angular/core": "^15.2.0-next.4",
-    "@angular/forms": "^15.2.0-next.4",
-    "@angular/localize": "^15.2.0-next.4",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^15.2.0-next.4",
-    "@angular/platform-browser-dynamic": "^15.2.0-next.4",
-    "@angular/router": "^15.2.0-next.4",
+    "@angular/animations": "^16.0.3",
+    "@angular/cdk": "^16.0.1",
+    "@angular/common": "^16.0.3",
+    "@angular/compiler": "^16.0.3",
+    "@angular/core": "^16.0.3",
+    "@angular/forms": "^16.0.3",
+    "@angular/localize": "^16.0.3",
+    "@angular/material": "^16.0.1",
+    "@angular/platform-browser": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
+    "@angular/router": "^16.0.3",
     "@circlon/angular-tree-component": "^11.0.4",
     "@fjsc/ng2-dnd-list": "^1.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.10.2",
     "@swimlane/ngx-charts": "^20.1.2",
     "@techiediaries/ngx-textarea-autosize": "^1.3.0",
@@ -44,18 +44,19 @@
     "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^12.0.1",
     "ngx-sortable": "^1.0.3",
-    "ngx-spinner": "^15.0.1",
+    "ngx-spinner": "^16.0.2",
+    "ngx-textarea-autosize": "^2.0.3",
     "ngx-toastr": "^16.0.2",
     "nvm": "0.0.4",
     "rxjs": "~7.5.0",
     "tasktimer": "^3.0.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.4",
-    "@angular/cli": "^15.0.4",
-    "@angular/compiler-cli": "^15.2.0-next.4",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler-cli": "^16.0.3",
     "@types/d3": "^7.4.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -65,7 +66,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.8.4",
+    "typescript": "~5.0.4",
     "webpack-bundle-analyzer": "^4.8.0"
   }
 }
